--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     </plurals>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enter_your_name">Enter Your Name</string>
+    <string name="please_enter_your_name">Please enter your name!</string>
+    <string name="orderer_name">Orderer\'s Name</string>
 </resources>
