当日に受け取れない条件付きのフレーバーとその機能を追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="enter_your_name">Enter Your Name</string>
     <string name="please_enter_your_name">Please enter your name!</string>
     <string name="orderer_name">Orderer\'s Name</string>
+    <string name="special_taste">Special Taste *</string>
+    <string name="supplemental_explanation_special_taste">* This cannot be picked up on the same day.</string>
 </resources>
